--- a/app/rootStyle.module.css
+++ b/app/rootStyle.module.css
@@ -1,4 +1,14 @@
-header {
+.homeLink {
+    text-decoration: none;
+    color: #efe1e1;
+}
+
+.menuBarLink { 
+    text-decoration: none;
+    color: #fff;
+}
+
+.header {
     width: 100%;
     height: 100%;
     padding: 50px 0px 50px;
